--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="item_1">Home</string>
     <string name="item_2">My Cart</string>
     <string name="item_3">Profile</string>
-    <string name="item_4">Chat</string>
+    <string name="item_4">Deals</string>
 </resources>
